--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Note Taker Application</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"/>
 </head>
-<h1 class="font-medium leading-tight text-5xl mt-0 mb-2 text-green-600"> 	📝  Note Taker Application  	📝  </h1>
-<div class="block p-6 rounded-lg shadow-lg bg-white max-w-md">
+
+<div class="bg-cover bg-center" style="background-image: url('./assets/notepad.jpg');"></div>
+<h1 class="text-center font-medium leading-tight text-5xl mt-0 mb-2 text-green-600"> 	📝  Note Taker Application  	📝  </h1>
+<h6 class="text-center font-medium leading-tight text-base mt-0 mb-2 text-green-400">(With Express!)</h6>
+<div class="d-flex justify-content-center block p-6 rounded-lg shadow-lg bg-white max-w-md">
     <form>
-      <div class="form-group mb-6">
+
+      <div class="d-flex align-items-center form-group mb-6">
         <textarea
         class="
           form-control
@@ -53,6 +58,17 @@
         duration-150
         ease-in-out">Save</button>
     </form>
+
+    <div class="flex justify-center">
+      <ul class="bg-white rounded-lg border border-gray-200 w-96 text-gray-900">
+        <li class="px-6 py-2 border-b border-gray-200 w-full rounded-t-lg">An item</li><i class="far fa-save"></i><i class="fas fa-ban"></i>
+        <li class="px-6 py-2 border-b border-gray-200 w-full">A second item</li><i class="far fa-save"></i><i class="fas fa-ban"></i>
+        <li class="px-6 py-2 border-b border-gray-200 w-full">A third item</li><i class="far fa-save"></i><i class="fas fa-ban"></i>
+        <li class="px-6 py-2 border-b border-gray-200 w-full">A fourth item</li><i class="far fa-save"></i><i class="fas fa-ban"></i>
+        <li class="px-6 py-2 w-full rounded-b-lg">And a fifth one</li><i class="far fa-save"></i><i class="fas fa-ban"></i>
+      </ul>
+    </div>
+    </div>
   </div>
 </body>
 </html>
