Centered everything and added a background.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <title>Note Taker Application</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"/>
+    <link rel="stylesheet" type="text/css" href=".//assets/style.css">
 </head>
-
-<div class="bg-cover bg-center" style="background-image: url('./assets/notepad.jpg');"></div>
 <h1 class="text-center font-medium leading-tight text-5xl mt-0 mb-2 text-green-600"> 	📝  Note Taker Application  	📝  </h1>
 <h6 class="text-center font-medium leading-tight text-base mt-0 mb-2 text-green-400">(With Express!)</h6>
-<div class="d-flex justify-content-center block p-6 rounded-lg shadow-lg bg-white max-w-md">
+<div class="flex flex-col justify-center items-center">
+  <div class="block p-6 rounded-lg shadow-lg bg-white w-6/12">
     <form>
-
       <div class="d-flex align-items-center form-group mb-6">
         <textarea
         class="
@@ -69,6 +68,5 @@
       </ul>
     </div>
     </div>
-  </div>
 </body>
 </html>
