--- a/index.html
+++ b/index.html
@@ -58,15 +58,36 @@
         ease-in-out">Save</button>
     </form>
 
-    <div class="flex justify-center">
-      <ul class="bg-white rounded-lg border border-gray-200 w-96 text-gray-900">
-        <li class="px-6 py-2 border-b border-gray-200 w-full rounded-t-lg">An item</li><i class="far fa-save"></i><i class="fas fa-ban"></i>
-        <li class="px-6 py-2 border-b border-gray-200 w-full">A second item</li><i class="far fa-save"></i><i class="fas fa-ban"></i>
-        <li class="px-6 py-2 border-b border-gray-200 w-full">A third item</li><i class="far fa-save"></i><i class="fas fa-ban"></i>
-        <li class="px-6 py-2 border-b border-gray-200 w-full">A fourth item</li><i class="far fa-save"></i><i class="fas fa-ban"></i>
-        <li class="px-6 py-2 w-full rounded-b-lg">And a fifth one</li><i class="far fa-save"></i><i class="fas fa-ban"></i>
-      </ul>
-    </div>
+    <div class="overflow-x-auto relative shadow-md sm:rounded-lg">
+      <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
+          <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+              <tr>
+                  <th scope="col" class="py-3 px-6">
+                      Note
+                  </th>
+                  <th scope="col" class="py-3 px-6">
+                      Save
+                  </th>
+                  <th scope="col" class="py-3 px-6">
+                      Delete
+                </th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr class="bg-white border-b dark:bg-gray-900 dark:border-gray-700">
+                  <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                      This note is a test. :) 
+                  </th>
+                  <td class="py-4 px-6">
+                    <i class="far fa-save"></i>
+                </td>
+                <td class="py-4 px-6">
+                  <i class="fas fa-ban"></i>
+                </td>
+              </tr> 
+            </tbody>
+      </table>
+  </div>
     </div>
 </body>
 </html>
