--- a/index.html
+++ b/index.html
@@ -1,93 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Note Taker Application</title>
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"/>
-    <link rel="stylesheet" type="text/css" href=".//assets/style.css">
-</head>
-<h1 class="text-center font-medium leading-tight text-5xl mt-0 mb-2 text-green-600"> 	📝  Note Taker Application  	📝  </h1>
-<h6 class="text-center font-medium leading-tight text-base mt-0 mb-2 text-green-400">(With Express!)</h6>
-<div class="flex flex-col justify-center items-center">
-  <div class="block p-6 rounded-lg shadow-lg bg-white w-6/12">
-    <form>
-      <div class="d-flex align-items-center form-group mb-6">
-        <textarea
-        class="
-          form-control
-          block
-          w-full
-          px-3
-          py-1.5
-          text-base
-          font-normal
-          text-gray-700
-          bg-white bg-clip-padding
-          border border-solid border-gray-300
-          rounded
-          transition
-          ease-in-out
-          m-0
-          focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none
-        "
-        id="exampleFormControlTextarea13"
-        rows="3"
-        placeholder="Type your notes here, and then click the save button."
-      ></textarea>
-      </div>
-      <button type="submit" class="
-        w-full
-        px-6
-        py-2.5
-        bg-green-600
-        text-white
-        font-medium
-        text-xs
-        leading-tight
-        uppercase
-        rounded
-        shadow-md
-        hover:bg-green-400 hover:shadow-lg
-        focus:bg-green-400 focus:shadow-lg focus:outline-none focus:ring-0
-        active:bg-green-800 active:shadow-lg
-        transition
-        duration-150
-        ease-in-out">Save</button>
-    </form>
+<html lang="en-US">
 
-    <div class="overflow-x-auto relative shadow-md sm:rounded-lg">
-      <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-          <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-              <tr>
-                  <th scope="col" class="py-3 px-6">
-                      Note
-                  </th>
-                  <th scope="col" class="py-3 px-6">
-                      Save
-                  </th>
-                  <th scope="col" class="py-3 px-6">
-                      Delete
-                </th>
-              </tr>
-          </thead>
-          <tbody>
-              <tr class="bg-white border-b dark:bg-gray-900 dark:border-gray-700">
-                  <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                      This note is a test. :) 
-                  </th>
-                  <td class="py-4 px-6">
-                    <i class="far fa-save"></i>
-                </td>
-                <td class="py-4 px-6">
-                  <i class="fas fa-ban"></i>
-                </td>
-              </tr> 
-            </tbody>
-      </table>
-  </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Note Taker</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
+</head>
+
+<body>
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Note Taker
+    </a>
+  </nav>
+  <div class="container">
+    <div style="margin-top: 80px;" class="jumbotron text-center">
+      <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
+      <h4 class="mt-4">Take notes with Express</h4>
+      <a class="btn btn-primary btn-lg mt-4" href="notes.html" role="button">Get Started</a>
     </div>
+  </div>
+  <script src="/assets/js/index.js"></script>
 </body>
 </html>
